# example_repair_fail

./: CMakeLists.txt  setup.py
include/: foo.h
src/: foo.cpp  pyfoo.cpp
